--- a/web/index.html
+++ b/web/index.html
@@ -9,18 +9,19 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div id="game-board">
-        <div class="cell" data-row="0" data-col="0"></div>
-        <div class="cell" data-row="0" data-col="1"></div>
-        <div class="cell" data-row="0" data-col="2"></div>
-        <div class="cell" data-row="1" data-col="0"></div>
-        <div class="cell" data-row="1" data-col="1"></div>
-        <div class="cell" data-row="1" data-col="2"></div>
-        <div class="cell" data-row="2" data-col="0"></div>
-        <div class="cell" data-row="2" data-col="1"></div>
-        <div class="cell" data-row="2" data-col="2"></div>
+        <div class="cell" data-row="0" data-col="0"> </div>
+        <div class="cell" data-row="0" data-col="1"> </div>
+        <div class="cell" data-row="0" data-col="2"> </div>
+        <div class="cell" data-row="1" data-col="0"> </div>
+        <div class="cell" data-row="1" data-col="1"> </div>
+        <div class="cell" data-row="1" data-col="2"> </div>
+        <div class="cell" data-row="2" data-col="0"> </div>
+        <div class="cell" data-row="2" data-col="1"> </div>
+        <div class="cell" data-row="2" data-col="2"> </div>
     </div>
     <button id="reset-button">Reset Game</button>
     <script src="logic.js"></script>
+    <div id="confetti-container"></div>
     <script src="script.js"></script>
 </body>
 </html>
