--- a/web/index.html
+++ b/web/index.html
@@ -23,5 +23,6 @@
     <script src="logic.js"></script>
     <div id="confetti-container"></div>
     <script src="script.js"></script>
+    <script src="ai.js"></script>
 </body>
 </html>
